tests/paczka1/fuzzy1/52326344.err
Error in line 1: vUlnCSMwvG1 S146 38,7
Error in line 6: DR6 S87 30,4
Error in line 3: 5BMVfI S87 18,8
Error in line 16: A787 S87 20,7
Error in line 21: A787 S146 22,9
Error in line 28: vUlnCSMwvG1 A828 38,4
Error in line 29: A787 A828 60,1
Error in line 36: DR6 Sw7 12,3
Error in line 38: 5BMVfI Î828 23,8
Error in line 24: DR6 A787 69,3
